--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       dockerfile: ./Cakes.Web/Dockerfile
     ports:
       - 8080:80
+    environment:
+    REACT_APP_API_URL: http://cakes_api:8082
   cakes_api:
     container_name: cakes_api
     image: cakesapi
